RAP-4912: fix flexbox item being wrapped with anonymous table elements in firefox
see https://bugzilla.mozilla.org/show_bug.cgi?id=1280313

--- a/app_storefront_core/cartridge/scss/default/_cart.scss
+++ b/app_storefront_core/cartridge/scss/default/_cart.scss
@@ -7,7 +7,11 @@
 	}
 	td {
 		box-sizing: border-box;
+		display: block;
 		padding: 5px;
+		@media screen and (min-width: 768px) {
+			display: table-cell;
+		}
 	}
 	.cart-row {
 		display: flex;
